# poetry-plugin-lambda-build

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/actions/setup-poetry/: action.yml
.github/workflows/: release.yml  run_tests_linux.yml  run_tests_windows.yml  test.yml
poetry_plugin_lambda_build/: commands.py  docker.py  parameters.py  plugin.py  recipes.py  recipies.py  requirements.py  utils.py  walker.py  zip.py
tests/: test_builds.py  test_docker.py  test_dockerignore.py  utils.py
tests/unit/: test_utils.py
