[tool.poetry]
name = "poetry-plugin-lambda-build"
version = "2.0.0"
description = "The plugin for poetry that allows you to build zip packages suited for serverless deployment like AWS Lambda, Google App Engine, Azure App Service, and more..."
authors = ["Michal Murawski <mmurawski777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
docker = "^7.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
pytest = "^8.0.1"
poetry = "^2.0.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.application.plugin"]
build-lambda = "poetry_plugin_lambda_build.plugin:LambdaPlugin"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=poetry_plugin_lambda_build",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["poetry_plugin_lambda_build"]
command_line = "-m pytest"

[tool.coverage.report]
include = ["poetry_plugin_lambda_build/*.py"]
omit = ["*__init__.py"]
show_missing = true
